# prism-rofi

./: .gitignore  README.rst  pyproject.toml
src/prism_rofi/: __main__.py
